--- a/Index.html
+++ b/Index.html
@@ -8,36 +8,36 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src=https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src=https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<nav class="navbar">
+	<nav class="navbar navbar-dark bg-dark sticky-top">
 		<a class="navbar-brand" href="#">
 			<img id="logo" src="logo.jpg" />
 			<div class="coronovirus">
 				<h3>FIGHT <br> Coronavirus</h3>
 			</div>
 		</a>
-			<div class="subnav">
+			<span class="subnav">
 				<div id="home"> <a href="Index.html">Home</a> </div>
 				<div id="events"> <a href="events.html">Events</a></div>
 				<div id="donation"> <a href="donation_page.html">Donation</a></div>
 				<div id="aboutUs"> <a href="about_us.html">About us</a></div>
 				<div id="contactUs"> <a href="contact_us.html">Contact us</a></div>
 				<script src="donation.js"></script>
-				<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><img src="facebookButton.png" width="40px" height="40px"/></a><br>
-				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><img src="twitterButton.png" width="40px" height="40px"/></a><br>
-				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><img src="googlePlusButton.png" width="35px" height="35px"/></a><br>
+				<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></i></a><br>
+				<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a><br>
+				<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a><br>
 				<select class="selectpicker" data-width="fit" onchange="location = this.value;">
 					<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="Index.html">English</option>
 				 	<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="IndexGR.html">Ελληνικά</option>
 				</select>
-			</div>
+			</span>
 	</nav>
-	<hr id="navBarLine">
 	<div class="row "id="pageWallpaper">
 		<div class="col-md-6">
 			<p id="text">The 2019–20 coronavirus pandemic is an ongoing global pandemic of coronavirus disease 2019 (COVID-19) caused by the severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). The virus was first reported in Wuhan, Hubei, China, in December 2019.On 11 March 2020, the World Health Organization declared the outbreak a pandemic. As of 12 March 2020, over 129,000 cases have been confirmed in more than 120 countries and territories, with major outbreaks in mainland China, Italy, South Korea, and Iran. More than 4,700 have died from the disease and 68,000 have recovered.
